2007-02-10  Lassi A. Tuura  <lat@iki.fi>

	* IgProfAtomic.h: New, implement a light-weight locking mechanism
	to manage profiler re-entrancy.  The reason for abandoning pthread
	locks for this is that they are not re-entrant themselves and so
	cannot be re-entered in signal handlers, and may allocate memory
	when contended and so cannot be re-entered in memory profiler.

	* igprof-analyse: Convert unidentified (@?0xADDRESS) symbols to
	file+offset pseudo-label when reading in the dumps.  This makes
	more sense to users and allows us to identify identical functions
	when reading in several dumps at once.

2007-02-08  Lassi A. Tuura  <root@maccms02.cern.ch>

	* igprof-analyse (igprof_filter_malloc_post): Add another array
	"new" operator to the list of malloc-like functions to suppress.

2007-02-07  Lassi A. Tuura  <root@maccms02.cern.ch>

	* IgProfPerf.cc (profileSignalHandler): Correct comment on why we
	remove two levels from the bottom of the stack trace.

	* IgProf.cc (initialize): If process wasn't selected for
	profiling, print the names that were used in matching.  If the
	process was selected for profiling, print out the program name.
	Initialise profile root early in order not to initialise it at a
	time we really shouldn't.  Use %f not %lf to format floats.
	(debug): Print the process id.
	(dump): Print process name on all platforms.  Use %f, not %lf.

	* igprof: Set variables correctly for working on OS X.  The
	library path is a hack however as there's no scram.

2007-02-01  Lassi A. Tuura  <lat@iki.fi>

	* IgProf.cc: Don't dump if the profiler wasn't activated.

	* igprof: Add -t/--target option to help set profiling target.

2007-01-31  Lassi A. Tuura  <lat@iki.fi>

	* IgProf.cc, igprof-analyse: Start the call depth counting from 1,
	now that we are dropping the unnecessary "fake" top frame.  In
	analysing read the program prefix separately outside the loop.

	* IgProf.cc: Produce new style, much more compact, dump.  Include