@@ -1,5 +1,10 @@
 2007-02-10  Lassi A. Tuura  <lat@iki.fi>
 
+	* IgProfPool.h, IgProfPool.cc: New, implement a high-performance
+	profile data gathering pool.  Used as an intermediate pool between
+	the profilers and the collector sides in order to avoid all dead
+	locks, reduce memory usage and improve performance.
+
 	* IgProfAtomic.h: New, implement a light-weight locking mechanism
 	to manage profiler re-entrancy.  The reason for abandoning pthread
 	locks for this is that they are not re-entrant themselves and so
